# ligandmpnn-jax

./: .gitignore  LICENSE  README.md  check_params.py  convert_pytorch_to_jax_params.py  output.json  pyproject.toml
src/ligandmpnn_jax/: cli.py  constants.py  data_utils.py  ligandmpnn_model.py  model.py  openfold.py  run_proteinmpnn.py  utils.py
