[project]
name = "ligandmpnn-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-julian", email = "52214154+m-julian@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.7",
    "jax[cuda12]>=0.10.0",
    "prody>=2.6.1",
]

[project.scripts]
ligandmpnn = "ligandmpnn_jax.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
